@@ -311,6 +311,7 @@ TSRM_API FILE *popen_ex(const char *command, const char *type, const char *cwd, 
 	SECURITY_ATTRIBUTES security;
 	HANDLE in, out;
 	DWORD dwCreateFlags = 0;
+	BOOL res;
 	process_pair *proc;
 	char *cmd;
 	int i;
@@ -370,11 +371,16 @@ TSRM_API FILE *popen_ex(const char *command, const char *type, const char *cwd, 
 	cmd = (char*)malloc(strlen(command)+strlen(TWG(comspec))+sizeof(" /c ")+2);
 	sprintf(cmd, "%s /c \"%s\"", TWG(comspec), command);
 
-	if (!CreateProcess(NULL, cmd, &security, &security, security.bInheritHandle, dwCreateFlags, env, cwd, &startup, &process)) {
-		free(cmd);
-		return NULL;
+	if(TWG(impersonation_token) == NULL) {
+		res = CreateProcess(NULL, cmd, &security, &security, security.bInheritHandle, dwCreateFlags, env, cwd, &startup, &process);
+	} else {
+		res = CreateProcessAsUser(TWG(impersonation_token), NULL, cmd, &security, &security, security.bInheritHandle, dwCreateFlags, env, cwd, &startup, &process);
 	}
 	free(cmd);
+
+	if (!res) {
+		return NULL;
+	}
 
 	CloseHandle(process.hThread);
 	proc = process_get(NULL TSRMLS_CC);
